# Ledgerlens-core

./: .env.example  .gitignore  CHANGELOG.md  COST_CAPACITY_IMPLEMENTATION.md  Cargo.toml  Dockerfile  Makefile  README.md  ROADMAP.md  TODO.md  cli.py  pyproject.toml  requirements.txt  run_pipeline.py
.github/: FUZZING_IMPLEMENTATION_STATUS.md
.github/ISSUES/: ISSUE-121.md  ISSUE-122.md  ISSUE-123.md  ISSUE-124.md  ISSUE-125.md
.github/workflows/: cd.yml  ci.yml  cost-monitoring-validation.yml  cross_repo_e2e.yml  fuzz-nightly.yml  nightly_fuzz.yml  schema.yml
alembic/versions/: 0001_initial_schema.py  0002_scoring_events.py  0003_case_assignments.py
api/: adaptive_rate_limiter.py  admin_router.py  allowlist_router.py  analyst.py  api_key_router.py  api_keys_router.py  audit_router.py  auth.py  gateway.py  gnn_router.py  graphql_schema.py  grpc_scoring_service.py  main.py  metrics.py  namespace.py  streaming.py  streaming_router.py  temporal_router.py  waf_middleware.py
audit/: __init__.py  scoring_events.py
benchmarks/: benchmark_feature_engineering.py
chaos-mesh/: network-partition-ingestion.yaml  network-partition-redis.yaml  pod-kill-api.yaml  pod-kill-ingestion.yaml  verify_experiment.py
circuits/: constants.circom  score_range_proof.circom
config/: cost_exporter.py  filter_config.yaml  filter_config.yaml.example  settings.py
contracts/: FUZZING_QUICK_START.md
contracts/oracle_aggregator/: Cargo.toml  README.md
contracts/oracle_aggregator/fuzz/: Cargo.toml
contracts/oracle_aggregator/fuzz/corpus/fuzz_canonical_message/: boundary_values
contracts/oracle_aggregator/fuzz/corpus/fuzz_submit_with_quorum/: valid_3of5
contracts/oracle_aggregator/fuzz/fuzz_targets/: fuzz_auth_bypass.rs  fuzz_canonical_message.rs  fuzz_submit_with_quorum.rs
contracts/oracle_aggregator/src/: lib.rs  test.rs
contracts/zk_verifier/: Cargo.toml  README.md
contracts/zk_verifier/fuzz/: Cargo.toml
contracts/zk_verifier/fuzz/corpus/fuzz_submit_score/: valid_score_50
contracts/zk_verifier/fuzz/corpus/fuzz_verify_threshold/: empty_proof
contracts/zk_verifier/fuzz/fuzz_targets/: fuzz_auth_bypass.rs  fuzz_submit_score.rs  fuzz_verify_threshold.rs
contracts/zk_verifier/src/: curve.rs  lib.rs  mod_arith_vectors.txt  test.rs  zk_test_vectors.txt
crates/ledgerlens-sdk/: Cargo.toml  README.md
crates/ledgerlens-sdk/examples/: soroban_integration.rs
crates/ledgerlens-sdk/src/: client.rs  error.rs  lib.rs  models.rs  zk.rs
crates/ledgerlens-sdk/tests/: client_test.rs
detection/: adversarial_features.py  alert_engine.py  analyst_store.py  api_key_store.py  benford_baseline.py  benford_engine.py  causal_engine.py  compliance_report.py  conformal.py  counterfactual_constraints.py  counterfactual_engine.py  counterfactual_translator.py  dataset.py  drift_detectors.py  drift_monitor.py  embedding_store.py  event_bus.py  exceptions.py  feature_engineering.py  feedback_store.py  gnn_ring_detector.py  governance.py  graph_engine.py  graph_sharding.py  lineage.py  mlflow_tracker.py  model_card.py  model_inference.py  model_training.py  path_cycle_detector.py  rate_limiter.py  risk_score.py  robustness_eval.py  rolling_window.py  shap_drift_monitor.py  shap_explainer.py  soroban_lease.py  soroban_publisher.py  storage.py  temporal_patterns.py  (+8 more)
detection/federated/: admission.py  audit.py  client.py  krum.py  server.py  weighting.py
docs/: COST_CAPACITY_QUICK_REFERENCE.md  UPGRADE_COST_CAPACITY.md  api_gateway.md  api_reference.md  audit_log.md  benford_stratification.md  byzantine_resilience.md  case_management.md  causal_inference.md  cli_reference.md  contract_fuzzing.md  cost_and_capacity.md  cross_chain_detection.md  database_migrations.md  drift_monitor.md  event_bus.md  federated_learning.md  filter-pipeline.md  gnn_ring_detection.md  governance_protocol.md  grpc_scoring.md  hyperparameter_optimization.md  ingestion.md  kubernetes_deployment.md  lineage.md  metrics.md  model_cards.md  model_signing.md  observability.md  openapi.json  oracle_quorum.md  performance.md  secret_rotation.md  slo.md  streaming_api.md  streaming_scorer.md  temporal_analysis.md  temporal_validation.md  testing_guide.md  threat_model.md  (+7 more)
fuzz/: README.md  __init__.py  fuzz_asset_parser.py  fuzz_evm_rpc_parser.py  fuzz_orderbook_event_parser.py  fuzz_solana_vaa_parser.py  fuzz_trade_parser.py
go/: README.md  client.go  client_test.go  doc.go  errors.go  go.mod  models.go  options.go  webhook.go  webhook_test.go
helm/: chaos-mesh-values.yaml
helm/ledgerlens/: Chart.yaml  (+1 more)
ingestion/: __init__.py  account_loader.py  adversarial_data.py  bridge_loader.py  data_models.py  dedup.py  dlq.py  evm_loader.py  filters.py  historical_loader.py  horizon_streamer.py  http_client.py  metrics.py  operations_loader.py  parquet_exporter.py  rate_limiter.py  replay_buffer.py  solana_adapter.py  stream_checkpoint.py  synthetic_data.py
monitoring/: README.md  alerts.yml  recording_rules.yml  recording_rules_cost.yml
scripts/: setup_trusted_ceremony.sh  train_gnn.py  train_lstm_autoencoder.py
tests/: conftest.py  test_account_metadata_enrichment.py  test_adversarial.py  test_alerts.py  test_analyst_case_management.py  test_analyst_dashboard.py  test_api.py  test_api_gateway.py  test_api_key_rotation.py  test_benford.py  test_causal_explanation_api_gate.py  test_causal_refutation_gate.py  test_compliance_exporter.py  test_compliance_report.py  test_config_propagation.py  test_cost_metrics.py  test_drift_monitor.py  test_embedding_store.py  test_event_bus.py  test_evm_provider_pool.py  test_feature_engineering_jit.py  test_feature_store.py  test_feature_store_archival.py  test_feature_store_cold.py  test_feature_store_redis.py  test_features.py  test_federated_admission.py  test_federated_audit.py  test_federated_dp.py  test_federated_integration.py  test_federated_privacy.py  test_federated_server.py  test_federated_sybil.py  test_federated_weighting.py  test_fuzz_harness_smoke.py  test_gnn_heterogeneous.py  test_gnn_ring_detector.py  test_governance.py  test_graph_engine.py  test_graph_sharding.py  (+41 more)
(+18 files in other folders)
