[package]
name = "oracle_aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
# `testutils` gates soroban_sdk::testutils (Env mocking, Address::generate,
# Ledger::set_timestamp). Without it the test module cannot compile.
# `alloc` provides Bytes::to_alloc_vec, used to compare digests in tests.
soroban-sdk = { version = "21.0", features = ["testutils", "alloc"] }
# Used to produce real ED25519 signatures so tests exercise the contract's
# on-chain ed25519_verify path rather than a stub.
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
rand = "0.8"
# Mirrors the Python side's hashlib.sha256 for the cross-language parity vector.
sha2 = "0.10"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "oracle_aggregator"
path = "src/lib.rs"

[profile.release]
overflow-checks = true
