[package]
name = "oracle_aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk = { workspace = true }
# Pinned explicitly (not just via [dev-dependencies] below) so the fuzz
# sub-crate (contracts/oracle_aggregator/fuzz), which depends on this crate
# via `path = ".."` and therefore shares this dependency graph, resolves
# the same 2.x-compatible ed25519-dalek/rand_core line that
# soroban-env-host's own testutils code (SigningKey::generate) requires,
# instead of drifting to ed25519-dalek 3.x (whose rand_core major version
# bump breaks that call). See docs in fuzz/Cargo.toml.
ed25519-dalek = "2.2"
rand = "0.8"
rand_core = "0.6"

[dev-dependencies]
# `testutils` gates soroban_sdk::testutils (Env mocking, Address::generate,
# Ledger::set_timestamp). Without it the test module cannot compile.
# `alloc` provides Bytes::to_alloc_vec, used to compare digests in tests.
soroban-sdk = { version = "21.0", features = ["testutils", "alloc"] }
# Used to produce real ED25519 signatures so tests exercise the contract's
# on-chain ed25519_verify path rather than a stub.
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
rand = "0.8"
# Mirrors the Python side's hashlib.sha256 for the cross-language parity vector.
sha2 = "0.10"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "oracle_aggregator"
path = "src/lib.rs"

[profile.release]
overflow-checks = true
