[package]
name = "ledgerlens-zk-verifier"
version = "0.1.0"
edition = "2021"
description = "Soroban contract that verifies zero-knowledge threshold proofs for LedgerLens risk scores"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
soroban-sdk-derive = "21.0.0"

[dev-dependencies]
arbitrary = { version = "1.3", features = ["derive"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
lto = true
