[package]
name = "ledgerlens-zk-verifier"
version = "0.1.0"
edition = "2021"
description = "Soroban contract that verifies zero-knowledge threshold proofs for LedgerLens risk scores"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
# Pinned explicitly so the fuzz sub-crate (contracts/zk_verifier/fuzz),
# which depends on this crate via `path = ".."` and therefore shares this
# dependency graph, resolves the same 2.x-compatible ed25519-dalek/rand_core
# line that soroban-env-host's own testutils code (SigningKey::generate,
# reached via env.register_contract/mock_all_auths under the testutils
# feature) requires, instead of drifting to ed25519-dalek 3.x. See
# contracts/oracle_aggregator/Cargo.toml for the matching pin and full
# rationale.
ed25519-dalek = "2.2"
rand = "0.8"
rand_core = "0.6"

[dev-dependencies]
arbitrary = { version = "1.3", features = ["derive"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
lto = true
