[package]
name = "ledgerlens-zk-verifier"
version = "0.1.0"
edition = "2021"
description = "Soroban contract that verifies zero-knowledge threshold proofs for LedgerLens risk scores"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
# `testutils` gates soroban_sdk::testutils (Env mocking, Address::generate,
# Ledger::set_timestamp). Without it src/test.rs cannot compile.
# `alloc` provides Bytes::to_alloc_vec / similar, used in tests.
soroban-sdk = { version = "21.0", features = ["testutils", "alloc"] }
arbitrary = { version = "1.3", features = ["derive"] }
# soroban-env-host 21.2.1 (pinned by soroban-sdk itself, every 21.x release)
# depends on `ed25519-dalek = ">=2.0.0"` with no upper bound. Its own
# testutils code (SigningKey::generate, reached via
# env.register_contract/mock_all_auths under the testutils feature) only
# compiles against the 2.x API; the newer ed25519-dalek 3.0 breaks it
# (E0277: ChaCha20Rng does not implement the 3.x-era CryptoRng trait).
# An exact version pin here (`=2.2.0`, vs. a caret range) is NOT sufficient
# on its own to prevent Cargo's resolver from independently picking 3.0.0
# for soroban-env-host's own unrelated edge -- verified: `cargo test` still
# failed with only this pin in place. What actually fixes it is the
# *committed* Cargo.lock at the repo root (after running
# `cargo update -p ed25519-dalek@3.0.0 --precise 2.2.0`), which collapses
# every edge in the graph onto the single 2.2.0 resolution. This pin is
# kept as defense-in-depth (keeps this crate's own edge from drifting) but
# is not the mechanism actually doing the work -- do not remove the
# committed lockfile assuming this line alone covers it.
#
# IMPORTANT: these MUST stay in [dev-dependencies], not [dependencies] --
# this contract's own logic never uses them, and putting them in
# [dependencies] pulls `getrandom` into the real wasm32 release build,
# which fails outright ("the wasm*-unknown-unknown targets are not
# supported by default") since a Soroban contract has no JS/browser
# environment to source entropy from.
ed25519-dalek = "=2.2.0"
rand = "0.8"
rand_core = "0.6"

# Passthrough feature so the fuzz sub-crate (contracts/zk_verifier/fuzz),
# which depends on soroban-sdk's `testutils` directly rather than via our
# own [dev-dependencies], can also request it -- `#[contracttype]`, under
# `testutils`, additionally derives `arbitrary::Arbitrary`, whose generated
# code references `std` unconditionally (see the `extern crate std` cfg in
# src/lib.rs). Not activated by a plain `cargo build`/release build, so it
# does not affect the real no_std wasm32 contract binary.
[features]
testutils = ["soroban-sdk/testutils"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
lto = true
