[package]
name = "oracle-aggregator-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1.3", features = ["derive"] }
oracle_aggregator = { path = ".." }
# Deliberately not `{ workspace = true }`: this crate declares its own
# [workspace] below (to stay isolated from the parent Cargo workspace, per
# the standard cargo-fuzz pattern), so it has no workspace.dependencies
# table of its own to inherit from. Pin the same version as the parent
# workspace's [workspace.dependencies] (root Cargo.toml) explicitly instead.
soroban-sdk = "21.0"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_submit_with_quorum"
path = "fuzz_targets/fuzz_submit_with_quorum.rs"
test = false
doc = false

[[bin]]
name = "fuzz_canonical_message"
path = "fuzz_targets/fuzz_canonical_message.rs"
test = false
doc = false

[[bin]]
name = "fuzz_auth_bypass"
path = "fuzz_targets/fuzz_auth_bypass.rs"
test = false
doc = false
