[package]
name = "oracle-aggregator-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1.3", features = ["derive"] }
oracle_aggregator = { path = "..", features = ["testutils"] }
# Deliberately not `{ workspace = true }`: this crate declares its own
# [workspace] below (to stay isolated from the parent Cargo workspace, per
# the standard cargo-fuzz pattern), so it has no workspace.dependencies
# table of its own to inherit from. Pin the same version as the parent
# workspace's [workspace.dependencies] (root Cargo.toml) explicitly instead.
# `testutils` gates Address::generate/mock_all_auths/Ledger::set_timestamp,
# used throughout fuzz_targets/*.rs to build test Envs -- mirrors
# oracle_aggregator's own [dev-dependencies] soroban-sdk features.
soroban-sdk = { version = "21.0", features = ["testutils", "alloc"] }
# Defense-in-depth pin -- see contracts/oracle_aggregator/Cargo.toml for the
# full explanation of the underlying soroban-env-host/ed25519-dalek 3.0
# incompatibility. IMPORTANT: this line alone does not fix it (verified: a
# real `cargo build`/`cargo fuzz run` here still failed with only this pin
# in place, even as a direct edge). The actual fix is the *committed*
# Cargo.lock in this directory, generated via
# `cargo update -p ed25519-dalek@3.0.0 --precise 2.2.0` -- this isolated
# fuzz workspace (see `[workspace]` below) has its own separate lockfile
# from the main repo workspace, so that fix had to be applied and committed
# here independently too.
ed25519-dalek = "=2.2.0"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_submit_with_quorum"
path = "fuzz_targets/fuzz_submit_with_quorum.rs"
test = false
doc = false

[[bin]]
name = "fuzz_canonical_message"
path = "fuzz_targets/fuzz_canonical_message.rs"
test = false
doc = false

[[bin]]
name = "fuzz_auth_bypass"
path = "fuzz_targets/fuzz_auth_bypass.rs"
test = false
doc = false
