[package]
name = "zk-verifier-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1.3", features = ["derive"] }
ledgerlens-zk-verifier = { path = "..", features = ["testutils"] }
# Deliberately not `{ workspace = true }`: this crate declares its own
# [workspace] below (to stay isolated from the parent Cargo workspace, per
# the standard cargo-fuzz pattern), so it has no workspace.dependencies
# table of its own to inherit from. Pin the same version as the parent
# workspace's [workspace.dependencies] (root Cargo.toml) explicitly instead.
# `testutils` gates Address::generate/mock_all_auths, used throughout
# fuzz_targets/*.rs to build test Envs.
soroban-sdk = { version = "21.0", features = ["testutils"] }
# Defense-in-depth pin -- see contracts/oracle_aggregator/Cargo.toml for the
# full explanation of the underlying soroban-env-host/ed25519-dalek 3.0
# incompatibility (reached here via the `testutils` feature above, not
# because this crate signs anything itself). The actual fix is the
# *committed* Cargo.lock in this directory
# (`cargo update -p ed25519-dalek@3.0.0 --precise 2.2.0`) -- this isolated
# fuzz workspace has its own separate lockfile from the main repo
# workspace.
ed25519-dalek = "=2.2.0"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_submit_score"
path = "fuzz_targets/fuzz_submit_score.rs"
test = false
doc = false

[[bin]]
name = "fuzz_verify_threshold"
path = "fuzz_targets/fuzz_verify_threshold.rs"
test = false
doc = false

[[bin]]
name = "fuzz_auth_bypass"
path = "fuzz_targets/fuzz_auth_bypass.rs"
test = false
doc = false
